2011-06-16 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	* src/libYARP_OS/src/RunReadWrite.cpp
	* src/libYARP_OS/src/RunProcManager.cpp
	* src/libYARP_OS/include/os/Run.h
	* src/libYARP_OS/include/os/impl/RunReadWrite.h
	* src/libYARP_OS//include/os/impl/RunProcManager.h
	yarprun splitted in more files.

2011-06-14 Alessandro Scalzo <alessandro.scalzo@iit.it>
	* src/libYARP_OS/src/Run.cpp
	yarprun stdio termination bug fixed.
	Dependendence by Companion removed,
	stdio implemented in Run.

2011-14-06  Lorenzo Natale  <lorenzo.natale@iit.it>
    * ChangeLog
    * CMakeLists.txt
    * conf/template/YARPConfigUninstall.cmake.in
    * conf/YARPUninstall.cmake
    Added Uninstall target
    

2011-06-06  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: render "[help]" responses
	in traditional form, for easy reading.

	* src/libYARP_dev/src/DeviceDriver.cpp: send "[help]" responses
	correctly on binary connections [thanks Juan G Victores]

2011-05-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump to version 2.3.4

2011-05-26  Marco Randazzo    <marco.randazzo@iit.it>
	
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfaces.h
	* src/libYARP_dev/include/yarp/dev/ControlBoardInterfacesImpl.h
	* src/libYARP_dev/src/ControlBoardInterfacesImpl.cpp
	* src/libYARP_dev/src/RemoteControlBoard.cpp
	The following methods of yarp::dev::IImpedanceControl have been deprecated:
	bool getImpedance(int j, double *stiffness, double *damping, double *offset)
	bool setImpedance(int j, double stiffness,  double damping,  double offset)
	Instead, use the new methods:
	bool getImpedance(int j, double *stiffness, double *damping)
	bool setImpedance(int j, double stiffness,  double damping)
	
2011-05-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: fix race condition
	when multiple processes try to connect the same two